# envlogger

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  setup.py
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.allpyversions  build.sh
envlogger/: BUILD.bazel  __init__.py  environment_logger.py  environment_logger_test.py  environment_wrapper.py  reader.py  requirements.txt  requirements_lock.txt  setup.py  step_data.py
envlogger/backends/: BUILD.bazel  __init__.py  backend_reader.py  backend_type.py  backend_writer.py  in_memory_backend.py  in_memory_backend_test.py  riegeli_backend_reader.py  riegeli_backend_writer.py  riegeli_backend_writer_test.py  rlds_utils.py  rlds_utils_test.py  schedulers.py  schedulers_test.py  tfds_backend_testlib.py  tfds_backend_writer.py  tfds_backend_writer_test.py
envlogger/backends/cc/: BUILD.bazel  episode_info.h  riegeli_dataset_io_constants.h  riegeli_dataset_io_test.cc  riegeli_dataset_reader.cc  riegeli_dataset_reader.h  riegeli_dataset_reader_test.cc  riegeli_dataset_writer.cc  riegeli_dataset_writer.h  riegeli_dataset_writer_test.cc  riegeli_shard_io_test.cc  riegeli_shard_reader.cc  riegeli_shard_reader.h  riegeli_shard_reader_test.cc  riegeli_shard_writer.cc  riegeli_shard_writer.h  riegeli_shard_writer_test.cc
envlogger/backends/cross_language_test/: BUILD.bazel  cc_reader.cc  cross_language_test.py  py_writer.py
envlogger/backends/python/: BUILD.bazel  __init__.py  episode_info.cc  episode_info_test.py  riegeli_dataset_reader.cc  riegeli_dataset_test.py  riegeli_dataset_writer.cc
envlogger/converters/: BUILD.bazel  __init__.py  codec.py  codec_test.py  make_visitor.h  make_visitor_test.cc  spec_codec.py  spec_codec_test.py  xtensor_codec.cc  xtensor_codec.h  xtensor_codec_test.cc
envlogger/examples/: BUILD.bazel  random_agent_catch.py  tfds_random_agent_catch.py
envlogger/platform/: BUILD.bazel  bundle.h  filesystem.h  parse_text_proto.h  proto_testutil.h  riegeli_file_reader.h  riegeli_file_writer.h  status_macros.h  test_macros.h
envlogger/platform/default/: BUILD.bazel  bundle.cc  bundle.h  filesystem.cc  filesystem.h  parse_text_proto.h  proto_testutil.h  riegeli_file_reader.h  riegeli_file_writer.h  source_location.h  status_builder.cc  status_builder.h  status_macros.h
envlogger/proto/: BUILD.bazel  __init__.py  storage.proto
envlogger/testing/: BUILD.bazel  catch_env.py
envlogger/tools/: BUILD.bazel  convert_tfds_to_riegeli.py  convert_tfds_to_riegeli_test.py
patches/: BUILD.bazel  crc32.BUILD.bazel  gmp.BUILD.bazel  highwayhash.BUILD.bazel  net_zstd.BUILD.bazel  pybind11_bazel.diff  riegeli.diff  riegeli.patch  snappy.BUILD.bazel  xtensor.BUILD.bazel  xtl.BUILD.bazel  zlib.BUILD.bazel
