# Copyright 2026 DeepMind Technologies Limited..
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "platforms",
    sha256 = "218efe8ee736d26a3572663b374a253c012b716d8af0c07e842e82f238a0a7ee",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/platforms/releases/download/0.0.10/platforms-0.0.10.tar.gz",
        "https://github.com/bazelbuild/platforms/releases/download/0.0.10/platforms-0.0.10.tar.gz",
    ],
)

load("@platforms//host:extension.bzl", "host_platform_repo")
host_platform_repo(name = "host_platform")

http_archive(
    name = "rules_cc",
    sha256 = "abc605dd850f813bb37004b77db20106a19311a96b2da1c92b789da529d28fe1",
    strip_prefix = "rules_cc-0.0.17",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.17/rules_cc-0.0.17.tar.gz"],
)

# abseil-cpp.
http_archive(
    name = "com_google_absl",
    sha256 = "6a63b94f0d790e373e591b2d60063e935d7ec16db09749d22bdeddc7f0a1a0fb",
    strip_prefix = "abseil-cpp-20260526.0",
    urls = ["https://github.com/abseil/abseil-cpp/archive/refs/tags/20260526.0.zip"],
)

http_archive(
    name = "abseil-cpp",
    sha256 = "6a63b94f0d790e373e591b2d60063e935d7ec16db09749d22bdeddc7f0a1a0fb",
    strip_prefix = "abseil-cpp-20260526.0",
    urls = ["https://github.com/abseil/abseil-cpp/archive/refs/tags/20260526.0.zip"],
)

http_archive(
    name = "com_google_protobuf",
    sha256 = "d2081ab9528292f7980ef2d88d2be472453eea4222141046ad4f660874d5f24e",
    strip_prefix = "protobuf-32.1",
    url = "https://github.com/protocolbuffers/protobuf/archive/refs/tags/v32.1.tar.gz",
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()


http_archive(
    name = "six_archive",
    build_file = "@com_google_protobuf//:six.BUILD",
    sha256 = "105f8d68616f8248e24bf0e9372ef04d3cc10104f1980f54d57b2ce73a5ad56a",
    url = "https://pypi.python.org/packages/source/s/six/six-1.10.0.tar.gz#md5=34eed507548117b2ab523ab14b2f8b55",
)

# Install `pip` requirements.
http_archive(
    name = "rules_python",
    sha256 = "e85ae30de33625a63eca7fc40a94fea845e641888e52f32b6beea91e8b1b2793",
    strip_prefix = "rules_python-0.27.1",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.27.1.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

register_toolchains(
    "@python_3_11_toolchains//:all",
)

# Import Bazel protobuf rules.
http_archive(
    name = "rules_proto",
    sha256 = "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
    strip_prefix = "rules_proto-7.1.0",
    urls = [
        "https://github.com/bazelbuild/rules_proto/releases/download/7.1.0/rules_proto-7.1.0.tar.gz",
    ],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies")

rules_proto_dependencies()

# Google Test and gmock.
http_archive(
    name = "com_google_googletest",
    sha256 = "81964fe578e9bd7c94dfdb09c8e4d6e6759e19967e397dbea48d1c10e45d0df2",
    strip_prefix = "googletest-release-1.12.1",
    urls = [
        "https://github.com/google/googletest/archive/refs/tags/release-1.12.1.tar.gz",
    ],
)

# Riegeli.
http_archive(
    name = "com_google_riegeli",
    sha256 = "7c0a8b7d5d8cd55fb7ab66f8afbd22a8a12c030d689ef4b011c518b998817fc1",
    strip_prefix = "riegeli-16a5703acfef66d26f90af57418295c6995b84ee",
    url = "https://github.com/google/riegeli/archive/16a5703acfef66d26f90af57418295c6995b84ee.tar.gz",
)

# Dependencies needed by Riegeli.
http_archive(
    name = "highwayhash",
    build_file = "//patches:highwayhash.BUILD.bazel",
    sha256 = "cf891e024699c82aabce528a024adbe16e529f2b4e57f954455e0bf53efae585",
    strip_prefix = "highwayhash-276dd7b4b6d330e4734b756e97ccfb1b69cc2e12",
    url = "https://github.com/google/highwayhash/archive/276dd7b4b6d330e4734b756e97ccfb1b69cc2e12.zip",  # 2019-02-22
)

http_archive(
    name = "net_zstd",
    build_file = "//patches:net_zstd.BUILD.bazel",
    sha256 = "30f35f71c1203369dc979ecde0400ffea93c27391bfd2ac5a9715d2173d92ff7",
    strip_prefix = "zstd-1.5.6/lib",
    url = "https://github.com/facebook/zstd/archive/refs/tags/v1.5.6.tar.gz",
)

http_archive(
    name = "org_brotli",
    sha256 = "e720a6ca29428b803f4ad165371771f5398faba397edf6778837a18599ea13ff",
    strip_prefix = "brotli-1.1.0",
    url = "https://github.com/google/brotli/archive/refs/tags/v1.1.0.tar.gz",
)

http_archive(
    name = "snappy",
    sha256 = "736aeb64d86566d2236ddffa2865ee5d7a82d26c9016b36218fcc27ea4f09f86",
    strip_prefix = "snappy-1.2.1",
    url = "https://github.com/google/snappy/archive/refs/tags/1.2.1.tar.gz",
)

http_archive(
    name = "crc32c",
    build_file = "//patches:crc32.BUILD.bazel",
    sha256 = "338f1d9d95753dc3cdd882dfb6e176bbb4b18353c29c411ebcb7b890f361722e",
    strip_prefix = "crc32c-1.1.0",
    urls = [
        "https://mirror.bazel.build/github.com/google/crc32c/archive/1.1.0.zip",
        "https://github.com/google/crc32c/archive/1.1.0.zip",  # 2019-05-24
    ],
)

http_archive(
    name = "zlib",
    build_file = "//patches:zlib.BUILD.bazel",
    sha256 = "b3a24de97a8fdbc835b9833169501030b8977031bcb54b3b3ac13740f846ab30",
    strip_prefix = "zlib-1.2.13",
    urls = ["https://www.zlib.net/zlib-1.2.13.tar.gz"],
)

# Xtensor and dependencies.
http_archive(
    name = "xtl",
    build_file = "//patches:xtl.BUILD.bazel",
    sha256 = "7c517db8a652a965c02a9e37ca3c3a8c7f5ba87868a02fe5a678eb4256b42d0b",
    strip_prefix = "xtl-e0f00666d90086bb245ae73abb6123d0e2c1b30b",
    urls = ["https://github.com/xtensor-stack/xtl/archive/e0f00666d90086bb245ae73abb6123d0e2c1b30b.zip"],
)

http_archive(
    name = "xtensor",
    build_file = "//patches:xtensor.BUILD.bazel",
    sha256 = "63ae5657e14f28a2375cc70b6dd0deb10247cb2010055a74fb6de93511735999",
    strip_prefix = "xtensor-54dbb8223d5a874261e8e988b487054d2e50710e",
    urls = ["https://github.com/xtensor-stack/xtensor/archive/54dbb8223d5a874261e8e988b487054d2e50710e.zip"],
)

# GMP.
new_local_repository(
    name = "gmp",
    build_file = "//patches:gmp.BUILD.bazel",
    path = "/usr/include/",
)

# Google Logging library.
http_archive(
    name = "com_github_gflags_gflags",
    sha256 = "34af2f15cf7367513b352bdcd2493ab14ce43692d2dcd9dfc499492966c64dcf",
    strip_prefix = "gflags-2.2.2",
    urls = ["https://github.com/gflags/gflags/archive/v2.2.2.tar.gz"],
)

http_archive(
    name = "com_github_google_glog",
    sha256 = "21bc744fb7f2fa701ee8db339ded7dce4f975d0d55837a97be7d46e8382dea5a",
    strip_prefix = "glog-0.5.0",
    urls = ["https://github.com/google/glog/archive/v0.5.0.zip"],
)

http_archive(
    name = "pybind11_bazel",
    sha256 = "b72c5b44135b90d1ffaba51e08240be0b91707ac60bea08bb4d84b47316211bb",
    strip_prefix = "pybind11_bazel-b162c7c88a253e3f6b673df0c621aca27596ce6b",
    urls = ["https://github.com/pybind/pybind11_bazel/archive/b162c7c88a253e3f6b673df0c621aca27596ce6b.zip"],
)

http_archive(
    name = "pybind11",
    build_file = "@pybind11_bazel//:pybind11.BUILD",
    sha256 = "51631e88960a8856f9c497027f55c9f2f9115cafb08c0005439838a05ba17bfc",
    strip_prefix = "pybind11-2.13.1",
    urls = ["https://github.com/pybind/pybind11/archive/v2.13.1.tar.gz"],
)

load("@pybind11_bazel//:python_configure.bzl", "python_configure")

python_configure(name = "local_config_python")

http_archive(
    name = "pybind11_protobuf",
    sha256 = "fbd966129d00174201413b6a00e5d6f0d29ce13197f50a6ffc54ba48027ad05a",
    strip_prefix = "pybind11_protobuf-8c2fe74d5cfc4c85655bf121c209d15d64600cd3",
    url = "https://github.com/pybind/pybind11_protobuf/archive/8c2fe74d5cfc4c85655bf121c209d15d64600cd3.zip",
)

git_repository(
    name = "com_google_benchmark",
    commit = "e991355c02b93fe17713efe04cbc2e278e00fdbd",  # v.1.5.5
    remote = "https://github.com/google/benchmark.git",
    shallow_since = "1623228732 +0300",
)
