# Copyright 2024 DeepMind Technologies Limited..
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Examples.
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "random_agent_catch",
    srcs = ["random_agent_catch.py"],
    deps = [
        "//envlogger",
        "//envlogger/testing:catch_env",
    ],
)

py_binary(
    name = "tfds_random_agent_catch",
    srcs = ["tfds_random_agent_catch.py"],
    deps = [
        "//envlogger",
        "//envlogger/backends:tfds_backend_writer",
        "//envlogger/testing:catch_env",
    ],
)
